--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,11 +15,18 @@ html {
  */
 
 body {
-  margin: 0;
+  margin: 0 auto;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
+  width: 450px;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ main {
+   padding: 140px 0px;
+   width: 450px;
+   background-color: white;
+ }
