--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,12 +7,14 @@
   background-color: #00a087;
   color: #e8fdff;
   padding: 0em 2em;
+  display: flex;
+  justify-content: flex-start;
+  z-index: 10;
 }
 
 #nav-bar .logo {
   width: 80px;
   height: 80px;
-  float: left;
 }
 
 #nav-bar .header {
