added compose button that toggles new tweet section and auto targets the text area

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -52,7 +52,7 @@ header img {
 
 .tweet-icons {
   display: none;
-  color: mediumaquamarine;
+  color: rgb(102, 205, 170);
   margin-left: auto;
 }
 
