--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,6 +9,7 @@
   padding: 0em 2em;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   z-index: 10;
 }
 
@@ -20,5 +21,19 @@
 #nav-bar .header {
   margin-left: 10px;
   font-size: 2rem;
-  line-height: 80px;
+}
+
+#nav-bar button {
+  margin-left: auto;
+  width: 100px;
+  height: 60px;
+  border-radius: 5px;
+  border: 1px solid black;
+  opacity: 0.85;
+  color: #2c9270;
+}
+
+#nav-bar button:hover {
+  opacity: 1;
+  color: black;
 }
