--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,4 +1,5 @@
-/* Variables */
+@import 'shared';
+
 #nav-bar {
   position: fixed;
   top: 0;
@@ -38,5 +39,3 @@
   opacity: 1;
   color: black;
 }
-
-/*# sourceMappingURL=nav.css.map */
