--- a/src/styles/new-tweet.scss
+++ b/src/styles/new-tweet.scss
@@ -16,6 +16,13 @@
 .new-tweet textarea {
   width: 100%;
   padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 0 0 1px #000;
+  border: 5px solid transparent;
+  resize: vertical;
+}
+#new-tweet-btn {
+  border-radius: 5px;
 }
 
 .counter {
