cleaned up sass files

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,4 +1,7 @@
 @import 'shared';
+@import 'nav';
+@import 'new-tweet';
+@import 'tweets';
 /*
  * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
  * https://css-tricks.com/international-box-sizing-awareness-day/
